--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning React</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
     <div id="root">Hello World!</div>
-    
+
     <script type="module" src="App.js"></script>
-</body>
+  </body>
 </html>
