--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="root">Hello World!</div>
 
-    <script type="module" src="App.js"></script>
+    <script type="module" src="App.jsx"></script>
   </body>
 </html>
