--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div id="root">Hello World!</div>
+    <div id="root"></div>
 
     <script type="module" src="/src/App.jsx"></script>
   </body>
