--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Order Food Online! Mayiladuthurai!</title>
     <link rel="stylesheet" href="index.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      className="rounded-4xl"
+      href="https://tse3.mm.bing.net/th/id/OIP.GsLhbrDghfG-i99SlDSwxAHaHa?pid=Api&P=0&h=180"
+    />
   </head>
   <body>
     <div id="root"></div>
